--- a/frontend/cancel.html
+++ b/frontend/cancel.html
@@ -29,34 +29,60 @@
     <!-- Main Content -->
     <main class="cg-content">
       <div class="result-container">
-        <!-- Cancel Card -->
-        <div class="cg-card text-center">
-          <!-- Cancel Icon -->
-          <div class="result-icon cancel">
-            <span>!</span>
+        <!-- Dynamic Result Card -->
+        <div class="cg-card text-center" id="result-card">
+          <!-- Dynamic Icon -->
+          <div class="result-icon cancel" id="result-icon">
+            <span id="icon-text">!</span>
           </div>
 
-          <!-- Cancel Message -->
-          <h1 class="result-title">Payment Cancelled</h1>
-          <p class="result-message">
+          <!-- Dynamic Title -->
+          <h1 class="result-title" id="result-title">Payment Cancelled</h1>
+          
+          <!-- Dynamic Message -->
+          <p class="result-message" id="result-message">
             Your payment was cancelled. No charges have been made to your account.
           </p>
 
-          <!-- Info Card -->
-          <div class="order-details">
-            <h3 style="margin: 0 0 16px; font-size: 1.1rem; font-weight: 600;">What Happened?</h3>
-            <div style="text-align: left;">
-              <p style="margin-bottom: 12px; color: var(--cg-muted);">You've cancelled the payment process. This could be because:</p>
-              <ul style="margin: 0; padding-left: 20px; color: var(--cg-muted);">
-                <li style="margin-bottom: 8px;">You decided not to complete the purchase</li>
-                <li style="margin-bottom: 8px;">You encountered an issue during checkout</li>
-                <li style="margin-bottom: 8px;">You want to review the plan details</li>
-              </ul>
+          <!-- Status Indicator -->
+          <div class="status-indicator cancel" id="status-indicator">
+            <span>! Cancelled</span>
+          </div>
+          <div class="status-value" id="status-value" style="color: var(--cg-secondary); font-weight: 600;">Cancelled</div>
+
+          <!-- Timeout Warning (hidden by default) -->
+          <div class="timeout-warning hidden" id="timeout-warning" style="background: var(--cg-warning-bg); color: var(--cg-warning); padding: 12px; border-radius: 8px; margin: 16px 0;">
+            <strong>⚠️ Payment Timeout</strong><br>
+            Your payment is taking longer than expected. Please check your email for confirmation.
+          </div>
+
+          <!-- Error Details (hidden by default) -->
+          <div class="error-details hidden" id="error-details" style="background: var(--cg-error-bg); color: var(--cg-error); padding: 12px; border-radius: 8px; margin: 16px 0;">
+            <strong>Error:</strong> <span id="error-message"></span>
+          </div>
+
+          <!-- Order Details -->
+          <div class="order-details" id="order-details">
+            <div class="detail-row">
+              <span class="detail-label">Order ID:</span>
+              <span class="detail-value" id="order-id">Loading...</span>
+            </div>
+            <div class="detail-row">
+              <span class="detail-label">Session ID:</span>
+              <span class="detail-value" id="session-id">Loading...</span>
+            </div>
+            <div class="detail-row">
+              <span class="detail-label">Plan:</span>
+              <span class="detail-value" id="plan-name">Loading...</span>
+            </div>
+            <div class="detail-row">
+              <span class="detail-label">Amount:</span>
+              <span class="detail-value" id="amount-value">Loading...</span>
             </div>
           </div>
 
           <!-- Action Buttons -->
-          <div class="action-buttons">
+          <div class="action-buttons" id="action-buttons">
             <a href="/payment" class="cg-button primary">
               Try Again
             </a>
@@ -65,8 +91,8 @@
             </a>
           </div>
 
-          <!-- Additional Help -->
-          <div class="mt-32 text-center" style="color: var(--cg-muted); font-size: 0.9rem;">
+          <!-- Additional Info -->
+          <div class="mt-32 text-center" style="color: var(--cg-muted); font-size: 0.9rem;" id="additional-info">
             <p style="margin-bottom: 8px; font-weight: 600; color: var(--cg-text);">Need help choosing a plan?</p>
             <p class="mb-0">Our support team is here to assist you. Feel free to reach out if you have any questions.</p>
           </div>
