--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,7 +116,7 @@
             <span class="price-amount">--.--</span>
             <span class="price-period">/ month</span>
           </div>
-          <p class="price-period">Billed monthly</p>
+          <p class="price-period"></p>
 
           <ul class="features-list">
             <li>Everything in Weekly Plan</li>
