--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,18 @@
           <span id="jwt-status-text" style="font-size: 14px; color: #666;">No JWT token stored</span>
           <button id="clear-jwt-btn" style="display: none; padding: 6px 12px; border: none; background: #ff4444; color: white; border-radius: 6px; cursor: pointer; font-size: 12px; font-weight: 600;">Clear JWT</button>
         </div>
+        
+        <!-- Promo Code Section -->
+        <div class="promo-code-section">
+          <input 
+            type="text" 
+            id="promo-code-input" 
+            placeholder="Enter promo code"
+            class="promo-input"
+          />
+          <button id="apply-promo-btn" class="promo-button">Apply</button>
+          <div id="promo-status" class="promo-status"></div>
+        </div>
       </div>
 
       <!-- Pricing Grid -->
